Fixed button on FireFox

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,7 +66,7 @@ body {
   text-shadow: 2px 2px 2px #777;
 
   background            : -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #e183a0), color-stop(1, #97002e));
-  background            : -moz-linear-gradient(center top, #e183a0 5%, #bbb 100%);
+  background            : -moz-linear-gradient(center top, #e183a0 5%, #97002e 100%);
   filter                : progid:DXImageTransform.Microsoft.gradient(startColorstr='#e183a0', endColorstr='#bbb');
   background-color      : #e183a0;
   -moz-border-radius    : 6px;
